# secureflow-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  test_vulnerable.py
.github/workflows/: deploy.yml
dashboard/: app.py
infra/: deploy.sh
spec/: development_plan.md  idea.md  innovation_summary.md  revised_idea.md
spec/track/: sprint1_diagnostics.md  sprint2_diagnostics.md
src/: config.py  main.py  models.py  orchestrator.py  telemetry.py
src/agents/: intelligence.py  remediation.py  scanner.py
src/plugins/: compliance_plugin.py  fix_plugin.py  github_plugin.py  mcp_plugin.py  pattern_plugin.py  risk_plugin.py  semgrep_plugin.py
test-app/: requirements.txt
test-app/app/routes/: payment.py  users.py
test-app/app/services/: auth.py
