[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secureflow-ai"
version = "0.1.0"
description = "AI-powered multi-agent DevSecOps intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    # Agent framework
    "semantic-kernel>=1.39",
    # Azure services
    "azure-cosmos>=4.7",
    "azure-identity>=1.17",
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Data validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # HTTP client
    "httpx>=0.27",
    # Observability
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "azure-monitor-opentelemetry-exporter>=1.0.0b21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",       # httpx mocking
    "ruff>=0.5",
]
dashboard = [
    "streamlit>=1.37",
    "plotly>=5.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
